Fix IE footer mis-alignment

--- a/app/styles/partials/footer.scss
+++ b/app/styles/partials/footer.scss
@@ -5,8 +5,11 @@
 }
 
 .main-container {
-  flex: 1;
   margin: 20px 0;
+}
+
+.flexed-container {
+  flex: 1;
 }
 
 footer {
@@ -15,5 +18,20 @@ footer {
 
   .language.menu > div {
     color:rgba(0, 0, 0, 0.87) !important;
+  }
+}
+
+
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .main-container {
+    margin: 20px 0;
+    min-height: 50vh;
+  }
+
+  footer {
+    position: absolute !important;
+    left: 0 !important;
+    right: 0 !important;
   }
 }
